main.css
body {
  /* Padding below the footer and lighter body text */
  padding-top: 3rem;
  padding-bottom: 3rem;
  color: #5a5a5a;
  --regular-color: #5a5a5a;
  --classics-color:  rgb(67, 139, 172);
  --fasttrack-color: rgb(49, 150, 35);
  --tentative-background: repeating-linear-gradient(
    -45deg,
    #fff,
    rgb(235, 235, 235) 10px,
    #fff 10px,
    #eee 20px
  );
}

.legend {
  width: 1em;
  height: 1em;
  display: inline-block;
  line-height: 1em;
}

.legend.regular {
  background-color: var(--regular-color);
}

.legend.classics {
  background-color: var(--classics-color);
}

.legend.fasttrack {
  background-color: var(--fasttrack-color);
}

.legend.tentative {
  background: var(--tentative-background);
}

.upcoming-event-list>.tentative {
  background: var(--tentative-background);
}

.upcoming-event-list .title {
  font-weight: bold;
  font-style: italic;
}

.upcoming-event-list .event-regular, .upcoming-event-list .event-regular a {
  color:  var(--regular-color);
}

.upcoming-event-list .event-classics, .upcoming-event-list .event-classics a {
  color:  var(--classics-color);
}

.upcoming-event-list .event-fasttrack, .upcoming-event-list .event-fasttrack a {
  color:  var(--fasttrack-color);
}

#past-event-list .event-regular, #past-event-list .event-regular a {
  color:  var(--regular-color);
}

.past-event-list .event-fasttrack .title {
  color:  var(--fasttrack-color);
}

.past-event-list>.tentative {
  background: var(--tentative-background);
}

.past-event-list .title {
  font-weight: bold;
}

.past-event-list .event-classics .title {
  color:  var(--classics-color);
}


.past-event-list .event-fasttrack .title {
  color:  var(--fasttrack-color);
}

#past-event-list .title {
  font-style: italic;
}

.modal-dialog .modal-header {
  text-align: center;
}

.modal-dialog .modal-header .title {
  line-height: 1.4em;
  /* font-style: italic; */
  font-family: serif;
  font-size: 2em;
  letter-spacing: 0.05em;
  text-transform: uppercase;
}
.modal-dialog .modal-header .title button {
  font-family: sans-serif;
}
.modal-dialog.event-regular .modal-header .title {
  color:  var(--regular-color);
}

.modal-dialog.event-classics .modal-header .title {
  color:  var(--classics-color);
}

.modal-dialog.event-fasttrack .modal-header .title {
  color:  var(--fasttrack-color);
}

.filter-tools {
  text-align: right;
}

#subject-filter-area {
  min-width: 200px;
  margin-right: 20px;
}

#subject-filter-area, #past-event-list_filter {
  display: inline-block;
}

#subject-filter-area .horizontal-elem {
  display: inline-block;
}

#subject-filter-area select {
  display: inline-block;
}

#events h3 {
  margin-top: 30px;
  margin-bottom: 20px;
}

main section {
  padding-top: 60px;
}

main section>h2 {
  margin-bottom: 30px;
}

img.profile {
  width: 100px;
  margin: 10px;
}

div.committee {
  align-items: center;
}

div.committee {
  margin-top: 10px;
  margin-bottom: 10px;
}

#steering-committee {
  text-align: center;
}

